--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
     <dependency>
       <groupId>org.kohsuke</groupId>
       <artifactId>github-api</artifactId>
-      <version>1.8</version>
+      <version>1.13-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
