using the very latest to fix NPE

--- a/pom.xml
+++ b/pom.xml
@@ -33,14 +33,14 @@
     <dependency>
       <groupId>org.kohsuke</groupId>
       <artifactId>github-api</artifactId>
-      <version>1.37</version>
+      <version>1.38</version>
     </dependency>
   </dependencies>
 
   <repositories>
     <repository>
-      <id>m.g.o-public</id>
-      <url>http://maven.glassfish.org/content/groups/public/</url>
+      <id>repo.jenkins-ci.org</id>
+      <url>http://repo.jenkins-ci.org/public/</url>
     </repository>
   </repositories>
 
